--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,6 @@
-[ ] Add Favicon
-[ ] Head title / description
+[x] Add Favicon
+[x] Head title / description
 [ ] FAQ
 [ ] Donate
 [ ] Search by ticker...
+[ ] twitter OG:Card
