--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,11 @@
 [x] Add Favicon
 [x] Head title / description
-[ ] FAQ
-[ ] Donate
+[x] FAQ
+[x] Donate
 [ ] twitter OG:Card
 [x] plausible
 
+V2
+--
+[ ] infinite loader
 [ ] Search by ticker...
