--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,5 @@
+V1
+--
 [x] Add Favicon
 [x] Head title / description
 [x] FAQ
@@ -8,4 +10,4 @@
 V2
 --
 [ ] infinite loader
-[ ] Search by ticker...
+[ ] Search by ticker
